--- a/MovieStoreC/MovieStoreC/appsettings.json
+++ b/MovieStoreC/MovieStoreC/appsettings.json
@@ -11,3 +11,15 @@
     "DatabaseName": "MoviesDb"
   }
 }
+{
+  "Kafka": {
+    "BootstrapServers": "localhost:9092"
+  },
+  "MongoDB": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "MovieStore"
+  },
+  "ExternalApi": {
+    "MovieEndpoint": "https://api.example.com/movies"
+  }
+} }
